# codebase-to-xml

./: .gitignore  Cargo.toml  README.md  codebase.sh
src/: main.rs
