[package]
name = "codebase-to-xml"
version = "0.1.2"
edition = "2024"
authors = ["Sanjay S Kumar"]
description = "A tool to convert codebase to xml format"
license = "MIT"
repository = "https://github.com/Quantaindew/codebase-to-xml"
readme = "README.md"

[dependencies]
chrono = "0.4.41"
ignore = "0.4.23"

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Full Link Time Optimization
codegen-units = 1       # Maximize optimizations by using a single codegen unit
panic = "abort"         # Remove panic unwinding code
strip = true            # Strip symbols from binary
overflow-checks = false # Disable integer overflow checks
debug = false           # No debug symbols
incremental = false     # Disable incremental compilation

[profile.dev]
opt-level = 3 # Use max optimizations even in dev builds
